--- a/typography_root/typography_app/templates/typography_app/index.html
+++ b/typography_root/typography_app/templates/typography_app/index.html
@@ -4,8 +4,8 @@
 
 <head>
     <title>Morocco</title>
-    <link rel="stylesheet" type="text/css" href="styles/reset.css">
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css"> -->
     <link rel="stylesheet" href="{% static 'typography_app/style.css' %}">
 </head>
 
